Bubble layout: Fix reactions right bubble alignment

--- a/res/css/views/rooms/_BubbleLayout.scss
+++ b/res/css/views/rooms/_BubbleLayout.scss
@@ -192,6 +192,10 @@ $left-gutter: 56px;
         width: 46px; /* 8 + 30 (avatar) + 8 */
     }
 
+    .mx_ReactionsRow {
+        margin-right: -6px;
+    }
+
     // ---- Bubble specific ----
 
     .sc_EventTile_bubbleContainer {
